# landbruget.dk

./: .gitignore
.github/: pull_request_template.md
.github/workflows/: bmd_monthly_pipeline.yml  chr_pipeline.yml  deploy-edge-function.yml  dma_pipeline.yml  drive_pipeline.yml  dst_pipeline.yml  property_owners_sftp_transfer.yml  property_owners_sftp_transfer_pipeline.yml  svineflytning_pipeline.yml  unified_pipeline.yml
backend/: .gitignore  README.md  cloudbuild.yaml  requirements.txt  sync_app.py
backend/api/: populating_mock_data.md
backend/common/: storage_interface.py
backend/pipelines/: .env.example  README.md  migrate_secrets_to_env.py
backend/pipelines/arbejdstilsynet_inspections/: README.md  main.py  (+2 more)
backend/pipelines/drive_data_pipeline/: .env.example  Dockerfile  PERFORMANCE_IMPROVEMENTS.md  README.md  __init__.py  docker-compose.yml  install_dependencies.py  main.py  pyproject.toml  run.py  run_tests.py  setup_and_test.py  test_duckdb.py  test_geopandas.py
backend/pipelines/drive_data_pipeline/bronze/: __init__.py  metadata.py  processor.py  storage.py
backend/pipelines/drive_data_pipeline/bronze/drive/: __init__.py  auth.py  fetcher.py  models.py
backend/pipelines/drive_data_pipeline/config/: __init__.py  cli.py  settings.py
backend/pipelines/drive_data_pipeline/config_tools/: __init__.py  export_config.py
backend/pipelines/drive_data_pipeline/docs/: architecture.md  index.md  setup.md  troubleshooting.md  user_guide.md
backend/pipelines/drive_data_pipeline/silver/: __init__.py  duckdb_helper.py  parquet_manager.py  processor.py  schema_manager.py  storage.py
backend/pipelines/drive_data_pipeline/silver/models/: __init__.py  schema.py  schema_adapter.py
backend/pipelines/drive_data_pipeline/silver/transformers/: __init__.py  advanced_pdf_transformer.py  base.py  excel_transformer.py  pdf_transformer.py
backend/pipelines/drive_data_pipeline/silver/validators/: __init__.py  base.py  geo_validator.py  pii_validator.py
backend/pipelines/drive_data_pipeline/standalone_tests/: __init__.py  direct_test_duckdb.py  direct_test_geopandas.py  simple_test_duckdb.py  simple_test_geopandas.py  test_duckdb.py  test_geopandas.py
backend/pipelines/drive_data_pipeline/test_output/: test_geo_simple.geoparquet
backend/pipelines/drive_data_pipeline/tests/: README.md  conftest.py
backend/pipelines/drive_data_pipeline/tests/bronze/drive/: test_auth.py
backend/pipelines/drive_data_pipeline/tests/integration/: test_bronze_process.py  test_end_to_end.py  test_silver_process.py
backend/pipelines/drive_data_pipeline/utils/: __init__.py  error_handling.py  helpers.py  logging.py  storage.py
backend/pipelines/dst_pipeline/: Dockerfile  README.md  bronze.py  docker-compose.yml  main.py  pyproject.toml  silver.py
backend/scripts[legacy]/: load_property_owners_to_bq.py  sync_agricultural_fields.py  sync_bnbo_status.py  sync_cadastral.py  sync_chr_data.py  sync_crops.py  sync_herd_data.py  sync_property_owners.py  sync_water_projects.py  sync_wetlands.py  test_vetstat.py
backend/src[legacy]/: config.py  main.py
(+117 files in other folders)
