[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drive_data_pipeline"
version = "0.1.0"
description = "A data pipeline that fetches files from Google Drive and processes them according to the medallion architecture"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Shoaib", email = "shoaib.star.a@gmail.com" }
]
dependencies = [
    "google-api-python-client>=2.100.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.1",
    "duckdb>=0.8.1",
    "ibis-framework>=7.0.0",
    "pydantic>=2.4.0",
    "python-dotenv>=1.0.0",
    "pyarrow>=14.0.0",
    "openpyxl>=3.1.2",
    "xlrd>=2.0.1",
    "pypdf>=3.15.1",
    "pdfplumber>=0.10.2",
    "tabula-py>=2.8.2",
    "google-cloud-storage>=2.10.0",
    "tenacity>=8.2.3",
    "loguru>=0.7.0",
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
    "pdf2image>=1.16.3",
    "pytesseract>=0.3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.1",
    "ruff>=0.0.290",
    "black>=23.9.1",
    "isort>=5.12.0",
    "pre-commit>=3.4.0",
    "types-requests",
]

[project.scripts]
drive-pipeline = "drive_data_pipeline.main:main"

[tool.setuptools.packages.find]
include = ["drive_data_pipeline*"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "B", "I", "N", "UP", "ANN", "A"]
ignore = ["ANN101", "ANN401"]

[tool.ruff.isort]
known-third-party = ["google", "duckdb", "ibis", "pydantic", "dotenv", "pyarrow", "openpyxl", "xlrd", "pypdf", "pdfplumber", "tabula", "geopandas", "shapely"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--cov=drive_data_pipeline --cov-report=term-missing -v" 