[project]
name = "dst-api-pipeline"
version = "0.1.0"
description = "Bronze layer pipeline for fetching data from Danmarks Statistik API."
readme = "README.md" 
requires-python = ">=3.11" 
license = { text = "MIT" } 
authors = [
    { name = "Your Name", email = "your@email.com" },
]
dependencies = [
    "requests>=2.31.0",
    "google-cloud-storage~=2.19.0",
    "python-dotenv~=1.0.1",
    "tqdm~=4.66.2",
    "pandas>=2.2.0",
    "pyarrow>=16.1.0",  
    'ibis-framework[duckdb]>=10.5.0',
    "gcsfs>=2024.2.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [".", "bronze", "silver"] 
include = ["README.md", "*.py"] 

[tool.hatch.build]
only-packages = true
artifacts = ["*.py"]

[tool.uv] 